--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "http-proxy-middleware": "^3.0.3",
     "lucide-react": "^0.459.0",
     "node-fetch": "^3.3.2",
