--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.4.1",
+    "framer-motion": "^11.13.5",
     "http-proxy-middleware": "^3.0.3",
     "lucide-react": "^0.459.0",
     "node-fetch": "^3.3.2",
